menu item div spacing issue

--- a/easy-delivery/src/app/css/MenuItem.css
+++ b/easy-delivery/src/app/css/MenuItem.css
@@ -33,8 +33,7 @@
 .cardContent {
   display: flex;
   flex-direction: column;
-  padding: 8px;
-  margin: 5px 10px;
+  padding: 15px;
 }
 
 .header {
